# nodesetLoader

backends/open62541/examples/: CMakeLists.txt
backends/open62541/tests/: CMakeLists.txt
backends/open62541/tests/dataTypeImport/: CMakeLists.txt
backends/open62541/tests/integration/client/: CMakeLists.txt
backends/open62541/tests/integration/reference_server/: CMakeLists.txt
backends/open62541/tests/integration/test_server/: CMakeLists.txt
backends/stdout/examples/: CMakeLists.txt
